# cafe-control-center

./: .build.yml  .travis.yml  AUTHORS  Makefile.am  NEWS  README  TODO  autogen.sh  cafe-control-center.pot  configure.ac  index.html  makepot  org.cafe.control-center.gschema.xml.in  org.cafe.control-center.keybinding.gschema.xml.in  output_a1b7503f1b4aa5b7f635dbce451d482b2246de05  output_f2cc28860f7ef8aed5e6e1a2c733e35245d2bbfc
.github/: issue_template.md
.tx/: config
2022-04-11-002608-91124-1@449d7039223d_croma/: commitmsg  index.html  report-01baa8.html  report-065797.html  report-08bbc0.html  report-0a5eeb.html  report-13315d.html  report-17cda4.html  report-18a96c.html  report-1e3ddb.html  report-27b9ad.html  report-28299f.html  report-2932a4.html  report-2f534b.html  report-30ed9d.html  (+35 more)
capplets/about-me/: Makefile.am  cafe-about-me-dialog.ui  cafe-about-me-fingerprint.c  cafe-about-me-fingerprint.h  cafe-about-me-fingerprint.ui  cafe-about-me-password.c  cafe-about-me-password.h  cafe-about-me-password.ui  cafe-about-me.c  cafe-about-me.desktop.in  e-image-chooser.c  e-image-chooser.h  org.cafe.ccc.am.gresource.xml  org.cafe.mcc.am.gresource.xml  ui-a11y.suppr
capplets/accessibility/at-properties/: Makefile.am  at-enable-dialog.ui  cafe-at-properties.desktop.in  dm-util.c  dm-util.h  main.c  org.cafe.ccc.accessibility.at.gresource.xml  org.cafe.mcc.accessibility.at.gresource.xml  ui-a11y.suppr
capplets/appearance/: Makefile.am  appearance-desktop.c  appearance-font.c  appearance-main.c  appearance-style.c  appearance-support.c  appearance-themes.c  appearance-ui.c  appearance.h  cafe-wp-info.c  cafe-wp-info.h  cafe-wp-item.c  cafe-wp-item.h  cafe-wp-xml.c  cafe-wp-xml.h  org.cafe.ccc.appearance.gresource.xml  org.cafe.mcc.appearance.gresource.xml  theme-installer.c  theme-installer.h  theme-save.c  theme-save.h  theme-util.c  theme-util.h
capplets/appearance/data/: Makefile.am  appearance.ui  cafe-appearance-properties.desktop.in  cafe-theme-installer.desktop.in  cafe-theme-package.xml.in  ui-a11y.suppr
capplets/common/: Makefile.am  activate-settings-daemon.c  cafe-theme-apply.c  cafe-theme-apply.h  cafe-theme-info.c  cafe-theme-info.h  cafe-theme-test.c  capplet-util.c  capplet-util.h  ctkrc-utils.c  ctkrc-utils.h  file-transfer-dialog.c  file-transfer-dialog.h  theme-thumbnail.c  theme-thumbnail.h  wm-common.c  wm-common.h
capplets/default-applications/: Makefile.am  cafe-da-capplet.c  cafe-da-capplet.h  cafe-default-applications-properties.desktop.in  cafe-default-applications-properties.ui  cafe-default-applications.pc.in  org.cafe.ccc.da.gresource.xml  org.cafe.mcc.da.gresource.xml
capplets/default-applications/icons/: Makefile.am
capplets/display/: Makefile.am  TODO  cafe-display-properties-install-systemwide.c  cafe-display-properties.desktop.in  display-capplet.ui  org.cafe.ccc.display.gresource.xml  org.cafe.mcc.display.gresource.xml  org.cafe.randr.policy.in  scrollarea.c  scrollarea.h  ui-a11y.suppr  xrandr-capplet.c
capplets/keybindings/: 00-multimedia-key.xml.in  01-desktop-key.xml.in  Makefile.am  cafe-keybinding-properties.c  cafe-keybinding-properties.ui  cafe-keybinding.desktop.in  cafe-keybindings.pc.in  eggaccelerators.c  eggaccelerators.h  eggcellrendererkeys.c  eggcellrendererkeys.h  org.cafe.ccc.keybindings.gresource.xml  org.cafe.mcc.keybindings.gresource.xml  ui-a11y.suppr
capplets/keyboard/: Makefile.am  cafe-keyboard-properties-a11y-notifications.ui  cafe-keyboard-properties-a11y.c  cafe-keyboard-properties-a11y.h  cafe-keyboard-properties-dialog.ui  cafe-keyboard-properties-layout-chooser.ui  cafe-keyboard-properties-model-chooser.ui  cafe-keyboard-properties-options-dialog.ui  cafe-keyboard-properties-xkb.c  cafe-keyboard-properties-xkb.h  cafe-keyboard-properties-xkblt.c  cafe-keyboard-properties-xkbltadd.c  cafe-keyboard-properties-xkbmc.c  cafe-keyboard-properties-xkbot.c  cafe-keyboard-properties-xkbpv.c  cafe-keyboard-properties.c  cafe-keyboard.desktop.in  org.cafe.ccc.keyboard.gresource.xml  org.cafe.mcc.keyboard.gresource.xml  ui-a11y.suppr
capplets/mouse/: Makefile.am  cafe-mouse-properties.c  cafe-mouse-properties.ui  cafe-settings-mouse.desktop.in  csd-input-helper.c  csd_input-helper.c  csd_input-helper.h  msd-input-helper.c  org.cafe.ccc.mouse.gresource.xml  org.cafe.mcc.mouse.gresource.xml  ui-a11y.suppr
capplets/network/: Makefile.am  cafe-network-properties.c  cafe-network-properties.desktop.in  cafe-network-properties.ui  org.cafe.ccc.network.gresource.xml  org.cafe.mcc.network.gresource.xml  ui-a11y.suppr
capplets/time-admin/src/: Makefile.am  main.c  org.cafe.ccc.ta.gresource.xml  org.cafe.mcc.ta.gresource.xml  time-admin.ui  time-map.c  time-map.h  time-share.c  time-share.h  time-tool.c  time-tool.h  time-zone.c  time-zone.h  time-zones.h
capplets/windows/: Makefile.am  cafe-metacity-support.c  cafe-metacity-support.h  cafe-window-properties.c  cafe-window-properties.desktop.in  org.cafe.ccc.windows.gresource.xml  org.cafe.mcc.windows.gresource.xml  window-properties.ui
font-viewer/: Makefile.am  cafe-font-viewer.desktop.in  cafe-font-viewer.thumbnailer  font-model.c  font-model.h  font-thumbnailer.c  font-utils.c  font-utils.h  font-view.c  gd-main-toolbar.c  gd-main-toolbar.h  sushi-font-widget.c  sushi-font-widget.h
libwindow-settings/: Makefile.am  cafe-window-manager.c  cafe-window-manager.h  cafe-window-settings-2.0.pc.in  cafe-wm-manager.c  cafe-wm-manager.h  croma-window-manager.c  croma-window-manager.h  marco-window-manager.c  marco-window-manager.h
man/: Makefile.am  cafe-about-me.1  cafe-appearance-properties.1  cafe-at-properties.1  cafe-control-center.1  cafe-default-applications-properties.1  cafe-display-properties-install-systemwide.1  cafe-display-properties.1  cafe-font-viewer.1  cafe-keybinding-properties.1  cafe-keyboard-properties.1  cafe-mouse-properties.1  cafe-network-properties.1  cafe-thumbnail-font.1  cafe-typing-monitor.1  cafe-window-properties.1
shell/: Makefile.am  cafecc.desktop.in  cafecc.directory.desktop.in  cafecc.menu  control-center.c
(+1994 files in other folders)
