man_MANS = \
    cafe-about-me.1 \
    cafe-appearance-properties.1 \
    cafe-at-properties.1 \
    cafe-control-center.1 \
    cafe-default-applications-properties.1 \
    cafe-display-properties.1 \
    cafe-display-properties-install-systemwide.1 \
    cafe-font-viewer.1 \
    cafe-keybinding-properties.1 \
    cafe-keyboard-properties.1 \
    cafe-mouse-properties.1 \
    cafe-network-properties.1 \
    cafe-thumbnail-font.1 \
    cafe-typing-monitor.1 \
    cafe-window-properties.1

EXTRA_DIST = $(man_MANS)

-include $(top_srcdir)/git.mk
